<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@drawable/wallpaper_light"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etName"
                android:lines="1"
                android:gravity="center"
                android:inputType="textImeMultiLine"
                android:hint="Enter Username" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDob"
                android:gravity="center"
                android:inputType="textImeMultiLine"
                android:hint="Enter Date Of Birth" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPhone"
                android:lines="1"
                android:gravity="center"
                android:inputType="phone"
                android:hint="Enter Phone Number" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:lines="1"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:hint="Enter E-mail" />
        </TableRow>
    </TableLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:layout_marginHorizontal="20dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRemoveInfo"
        android:text="@string/removeInfo"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMessage" />

</LinearLayout>