<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/wallpaper_light"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTurn"
            android:layout_marginTop="15dp"
            android:text="@string/playerTurn"
            android:gravity="center"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMessage"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/handImgContainer"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:minWidth="116px">

            <ImageView
                android:id="@+id/imgLeft_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/stone139_r" />

            <ImageView
                android:id="@+id/imgRight_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/stone139_r_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:minWidth="116px">

            <ImageView
                android:id="@+id/imgLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/stone139" />

            <ImageView
                android:id="@+id/imgRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/stone139_right" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/opponentDialog"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="90dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerDialog"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="130dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/handChoice"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hand00"
                android:text="(0,0)"
                android:textSize="20sp"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hand05"
                android:text="(0,5)"
                android:textSize="20sp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hand50"
                android:text="(5,0)"
                android:textSize="20sp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hand55"
                android:text="(5,5)"
                android:textSize="20sp"
                android:layout_weight="1" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGuess0"
                android:text="0"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGuess5"
                android:text="5"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGuess10"
                android:text="10"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGuess15"
                android:text="15"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGuess20"
                android:text="20"
                android:layout_weight="1"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGo"
                android:text="@string/go"
                android:layout_weight="1"
                android:onClick="onClick" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvLoad"
                android:text="Loading..."
                android:layout_weight="1"
                android:textSize="30sp"
                android:gravity="center"

                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRestart"
            android:text="@string/restart"
            android:onClick="btnOnClick"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnQuit"
                android:text="@string/quit"
                android:onClick="btnOnClick"
                android:layout_weight="3"
                android:visibility="gone"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnStatistic"
                android:text="@string/statistic"
                android:onClick="btnOnClick"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>